--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -39,26 +39,4 @@ jobs:
         env: 
           GOPROXY: "https://proxy.golang.org"
         # run runs command-line programs using the operating system's shell.
-        run: go build -v ./...
-
-      # Run test cases on the code
-      - name: Test Cases
-        run: go test -v ./...
-
-      # Run go vet on the code
-      - name: Check go vet 
-        run: go vet ./...
-
-      # Run gofmt on the code
-      - name: Check Formatting using go fmt
-        run: |
-              gofmt -s -l .
-                        
-              if [ "$(gofmt -s -l . | wc -l)" -gt 0 ]; then exit 1; fi
-
-      # Run go lint on the code
-      - name: Run go lint 
-        run: |
-              curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.26.0
-
-              golangci-lint run
+        run: gcc build -v ./...
