Add Balancing Brackets Test

--- a/CPP/Applications/Stack/BalancingBrackets/Makefile
+++ b/CPP/Applications/Stack/BalancingBrackets/Makefile
@@ -1,10 +1,15 @@
 CC := g++
 CCFLAGS:= -fdiagnostics-color=always -g -Wall #-c 
 
-SOURCES  :=  $(wildcard *.cpp)
+DIRS := $(shell cat ./DataStructures)
+
+#Stack/Stack.cpp
+SRC_PATH :=  $(foreach dir,$(DIRS),$(dir)) 
+SOURCES  :=  $(foreach S,$(SRC_PATH),$(wildcard $(S)/*.cpp)) 
+INC :=  $(foreach dir,$(DIRS), -I$(dir))
 
 all:
-	@$(CC) $(CCFLAGS) $(SOURCES) -o main.exe
+	@$(CC) $(CCFLAGS) $(SOURCES) $(INC) main.cpp -o main.exe
 	@./main.exe
 
 clean:
