--- a/CPP/Makefile
+++ b/CPP/Makefile
@@ -12,11 +12,11 @@ Command := $(firstword $(MAKECMDGOALS))
 Arguments := $(wordlist 2,$(words $(MAKECMDGOALS)),$(MAKECMDGOALS))
 
 all:
-	@$(CC) $(CCFLAGS) $(SOURCES) $(INC) main.cpp -o main.exe
-	@./main.exe
+	@$(CC) $(CCFLAGS) $(SOURCES) $(INC) main.cpp -o DSA.exe
+	# @./main.exe
 
 build:
-	@$(CC) $(CCFLAGS) $(SOURCES) $(INC) main.cpp -o main.exe
+	@$(CC) $(CCFLAGS) $(SOURCES) $(INC) main.cpp -o DSA.exe
 
 clean:
 	@echo CLEANING ..........
