Support running unit tests in make file by using make utests

--- a/CPP/Makefile
+++ b/CPP/Makefile
@@ -17,6 +17,10 @@ all:
 build:
 	@$(CC) $(CCFLAGS) $(SOURCES) $(INC) main.cpp -o DSA.o
 
+utests:
+	@$(CC) $(CCFLAGS) $(SOURCES) $(INC) main.cpp -o DSA.o
+	./DSA.o uTest
+
 clean:
 	@echo CLEANING ..........
 	@rm -rf *.o
